delete double omega

--- a/my_vacation/templates/my_vacation/base.html
+++ b/my_vacation/templates/my_vacation/base.html
@@ -14,7 +14,7 @@
 
     <header>
         {% include 'includes/header.html' %}
-    </header>ΩΩ
+    </header>
     <main>
         {% block main %}{% endblock %}
     </main>
